<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Deniz_Evrendilek_User_Interface</string>
    <string name="myruns2">MyRuns2</string>

    <string-array name="InputType">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <string-array name="ActivityType">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Profile -->
    <string name="profile_pic_title">Profile Picture</string>
    <string name="profile_pic_select">Change Picture</string>
    <string name="name_input_label">Name</string>
    <string name="name_input_hint">Your Name</string>
    <string name="email_input_label">Email</string>
    <string name="email_input_hint">Your Email</string>
    <string name="phone_input_label">Phone</string>
    <string name="phone_number_input_hint">Your Phone Number</string>
    <string name="gender_radio_label">Gender</string>
    <string name="female_radio_label">Female</string>
    <string name="male_radio_label">Male</string>
    <string name="class_input_label">Class</string>
    <string name="major_input_label">Major</string>
    <string name="major_input_hint">Your Major</string>
    <string name="classYear_input_hint">eg. 2012</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="menu_item_settings">Settings</string>
</resources>