<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_pic_title" />

                <ImageView
                    android:id="@+id/image_view_profile_picture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/profile_pic_title"
                    android:src="@drawable/el_gato_drawable" />

                <Button
                    android:id="@+id/select_picture_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_pic_select" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="60dp"
                    android:text="@string/name_input_label" />

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/name_input_hint"
                    android:inputType="text"
                    android:maxWidth="488dp"
                    android:textColorHint="#8D6E63"
                    android:textSize="20sp"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="60dp"
                    android:text="@string/email_input_label" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_input_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxWidth="488dp"
                    android:textColorHint="#8D6E63"
                    android:textSize="20sp"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="60dp"
                    android:text="@string/phone_input_label" />

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="phone"
                    android:hint="@string/phone_number_input_hint"
                    android:inputType="phone"
                    android:maxWidth="488dp"
                    android:textColorHint="#8D6E63"
                    android:textSize="20sp"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="60dp"
                    android:text="@string/gender_radio_label" />

                <RadioButton
                    android:id="@+id/radio_button_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/female_radio_label"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_radio_label"
                    android:textSize="20sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="60dp"
                    android:text="@string/class_input_label" />

                <EditText
                    android:id="@+id/input_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/classYear_input_hint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:maxWidth="488dp"
                    android:textColorHint="#8D6E63"
                    android:textSize="20sp"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="60dp"
                    android:text="@string/major_input_label" />

                <EditText
                    android:id="@+id/input_major"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/major_input_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxWidth="488dp"
                    android:textColorHint="#8D6E63"
                    android:textSize="20sp"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_cancel_save_info"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:text="@string/cancel_button_text"
                    android:textColor="#fff"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/button_save_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_button_text"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>